--- a/dialer/callrequest-params.ini
+++ b/dialer/callrequest-params.ini
@@ -1,8 +1,19 @@
 ####DEFAULT Trunk Parameters if NOT sent by POST URL
-trunkTechName=SIP/to-tci
+#Sample: SIP/to-tci/
+trunkTechName=SIP/to-tci/
+
+#Sample: 9
 pbxOutPrefix=
+
 #Sample: callerId=2191001099
 callerId=
+
+####AsteriskProperties
+asterisk_host = "127.0.0.1"
+ami_user = "phpconfig"
+ami_password = "php[onfig"
+
+------------------------------
 
 ####Website or Sender IPs Allowd
 #yes or no
@@ -12,11 +23,6 @@ allowedDomains2=voipiran.io
 allowedDomains3=www.voipiran.io
 allowedDomains4=
 allowedDomains5=
-
-####AsteriskProperties
-asterisk_host = "127.0.0.1"
-ami_user = "phpconfig"
-ami_password = "php[onfig"
 
 ####App Properties
 #Sample: yes or no
