--- a/dialer/callrequest-params.ini
+++ b/dialer/callrequest-params.ini
@@ -1,12 +1,12 @@
 ####DEFAULT Trunk Parameters if NOT sent by POST URL
-#Sample: SIP/to-tci/
-trunkTechName=SIP/to-tci/
+#Sample: SIP/to-tci
+trunkTechName=SIP/to-tci
 
 #Sample: 9
 pbxOutPrefix=
 
 #Sample: callerId=2191001099
-callerId=
+callerId=43398000
 
 ####AsteriskProperties
 asterisk_host = "127.0.0.1"
